v0.10/_sources/api/generated/metpy.plots.ContourPlot.rst.txt
ContourPlot
=======================

.. currentmodule:: metpy.plots

.. autoclass:: ContourPlot

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~ContourPlot.clabels
      ~ContourPlot.colorbar
      ~ContourPlot.colormap
      ~ContourPlot.contours
      ~ContourPlot.cross_validation_lock
      ~ContourPlot.data
      ~ContourPlot.field
      ~ContourPlot.griddata
      ~ContourPlot.image_range
      ~ContourPlot.level
      ~ContourPlot.linecolor
      ~ContourPlot.linestyle
      ~ContourPlot.linewidth
      ~ContourPlot.name
      ~ContourPlot.parent
      ~ContourPlot.plotdata
      ~ContourPlot.time

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~ContourPlot.__init__
      ~ContourPlot.add_traits
      ~ContourPlot.class_own_trait_events
      ~ContourPlot.class_own_traits
      ~ContourPlot.class_trait_names
      ~ContourPlot.class_traits
      ~ContourPlot.clear
      ~ContourPlot.clear_collections
      ~ContourPlot.clear_handle
      ~ContourPlot.draw
      ~ContourPlot.has_trait
      ~ContourPlot.hold_trait_notifications
      ~ContourPlot.notify_change
      ~ContourPlot.observe
      ~ContourPlot.on_trait_change
      ~ContourPlot.set_trait
      ~ContourPlot.setup_instance
      ~ContourPlot.trait_events
      ~ContourPlot.trait_metadata
      ~ContourPlot.trait_names
      ~ContourPlot.traits
      ~ContourPlot.unobserve
      ~ContourPlot.unobserve_all

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: clabels
   .. autoattribute:: colorbar
   .. autoattribute:: colormap
   .. autoattribute:: contours
   .. autoattribute:: cross_validation_lock
   .. autoattribute:: data
   .. autoattribute:: field
   .. autoattribute:: griddata
   .. autoattribute:: image_range
   .. autoattribute:: level
   .. autoattribute:: linecolor
   .. autoattribute:: linestyle
   .. autoattribute:: linewidth
   .. autoattribute:: name
   .. autoattribute:: parent
   .. autoattribute:: plotdata
   .. autoattribute:: time

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: __init__
   .. automethod:: add_traits
   .. automethod:: class_own_trait_events
   .. automethod:: class_own_traits
   .. automethod:: class_trait_names
   .. automethod:: class_traits
   .. automethod:: clear
   .. automethod:: clear_collections
   .. automethod:: clear_handle
   .. automethod:: draw
   .. automethod:: has_trait
   .. automethod:: hold_trait_notifications
   .. automethod:: notify_change
   .. automethod:: observe
   .. automethod:: on_trait_change
   .. automethod:: set_trait
   .. automethod:: setup_instance
   .. automethod:: trait_events
   .. automethod:: trait_metadata
   .. automethod:: trait_names
   .. automethod:: traits
   .. automethod:: unobserve
   .. automethod:: unobserve_all

   
   

.. include:: metpy.plots.ContourPlot.examples

.. raw:: html

     <div style='clear:both'></div>